@@ -24,8 +24,6 @@ implement in GXemul. Some items in this list are perhaps already fixed.
 <b>Current "short-list":</b>
 
 o) LUNA88K SCSI:
-	o) Implement everything else, to make it pass bsd bootup! :-)
-	o) debugmsg:ify diskimage* stuff?
 	o) Try a full OpenBSD install, and if it works, update the documentation.
 o) Breakpoints on subsystem messages?
 	breakpoint subsystem		<- show any subsystem breakpoints
