@@ -5017,3 +5017,5 @@ Changelog for GXemul:
 20210325	The mb89352 SCSI controller uses its own subsystem for debug
 		messages.
 20210327	Adding an empty RISC-V CPU skeleton [again].
+		Implementing enough of the mb89352 to allow OpenBSD/luna88k
+		to work (both the boot loader and the kernel)!
